syntax = "proto3";
package grpc_sample.echo;

option go_package = "github.com/helloteemo/pb/echo";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

message EchoRequest {
  // The message to echo.
  string message = 1[(validate.rules).string = {min_len: 1, max_len: 32}];
}

message EchoResponse {
  // The echoed message.
  string message = 1;
}

service EchoService {

  // Echoes the message.
    rpc Echo(EchoRequest) returns (EchoResponse){
      option (google.api.http) = {
        post:"/grpc-sample/echo/v1/do"
        body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        summary: "echo"
        description: "",
        tags: ["app"]
      };
    };

}